[package]
name = "linux-input"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"
repository = "https://github.com/koute/linux-input"
homepage = "https://github.com/koute/linux-input"
documentation = "https://docs.rs/linux-input/*/linux-input/"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Rust bindings to Linux's input subsystems"

[dependencies]
nix = "0.17"
libc = "0.2"
